Professor FAQs + fixed shift issue.

--- a/src/Components/Professors/FAQ/FAQProfessor.module.css
+++ b/src/Components/Professors/FAQ/FAQProfessor.module.css
@@ -10,27 +10,14 @@
   
 .header {
     grid-area: header;
-    /* grid-column: 1 / 4;
-    grid-row: 1; */
-    /* border: 2px solid blue; */
-    /* background-color: rgba(0, 0, 255, 0.3); */
-    /* background-color: blue; */
     background-color: rgb(255, 255, 255);
-  
     position: fixed;
-    /* width: 100%; */
-    /* height:  15%; */
     z-index: 2;
 }
   
 .sidebar {
     grid-area: sidebar;
-    /* grid-column: 1;
-    grid-row: 2 / 4; */
-    /* border: 2px solid #ff0000; */
-    background-color: rgba(0, 78, 127, 0.50);
-    /* background-color: rgba(255, 0, 0, 0.3); */
-  
+    background-color: rgba(0, 78, 127, 0.50);  
     position: fixed;
     height: 100%;
     width: 15%;
@@ -40,13 +27,109 @@
   
 .main {
     grid-area: main;
-    padding-top: 8%;
+    padding-top: 5%;
     padding-left: 2%;
     padding-right: 2%;
     padding-bottom: 2%;
-    /* grid-column: 2 / 4;
-    grid-row: 2 / 4; */
-    /* border: 2px solid green; */
-    /* background-color: green; */
-    /* background-color: rgba(0, 255, 55, 0.3); */
+    min-height: 500px;
+    overflow-y: auto;
+}
+
+/* =========== | FAQs Text | =========== */
+
+.faqItem {
+    margin-bottom: 10px;
+}
+  
+.faqButton {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgba(0, 78, 127, 0.40);
+    border-radius: 5px;
+    padding: 10px;
+    width: 100%;
+    cursor: pointer;
+    border: none;
+}
+
+.faqButtonOpen{
+    border-radius: 5px 5px 0 0;
+}
+
+.faqAnswer, .faqAnswerOpen {
+    padding: 10px;
+    border-radius: 0 0 5px 5px;
+}
+
+.faqAnswer {
+    display: none;
+}
+
+.faqAnswerOpen {
+    display: block;
+    background-color: rgba(0, 78, 127, 0.15);
+    text-align: left;
+}
+
+/* =========== | FAQs Text | =========== */
+.faqQuestionText {
+    font-weight: bold; 
+    font-size: 16px; 
+}
+
+.faqAnswerText {
+    font-size: 14px; 
+}
+
+/* ======== | Select button | ======== */
+.selectWrapper {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown{
+    position: relative;
+    display: flex;
+    align-items: center;           
+    gap: 10px;                    
+}
+
+.dropdown h2{
+    font-size: 18px;
+    font-weight: 700;
+    color: black;
+}
+
+.dropdown-select{
+    width: 100%; 
+    padding: 8px 12px;
+    border: 1px solid #ccc; 
+    border-radius: 5px; 
+    background-color: white;
+    color: #333; 
+    font-size: 16px; 
+    appearance: none; 
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    cursor: pointer;
+    padding-right: 30px;
+}
+
+.dropdown-select option {
+    color: #333; 
+    background-color: white; 
+    padding: 5px; 
+}
+
+.dropdown-select:focus {
+    outline: none;
+}
+
+.select-arrow {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    pointer-events: none; 
 }
